# Flam_Assignment

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgedetect/: GLRenderer.kt  MainActivity.kt
web/: index.html  main.js  main.ts  tsconfig.json  tsconfig.tsbuildinfo
